# rpk

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
pal_app/: pal_app.py
rpk/: rpk.py
scripts/: pal_app  pal_create_app  pal_create_behaviour
test/: test_generation.py
tpl/apps/python/{{id}}/: package.xml.j2
tpl/apps/python/{{id}}/launch/: {{id}}.launch.py.j2
tpl/intents/basic_chatbot/{{id}}/: README.md.j2
tpl/intents/basic_chatbot/{{id}}/{{id}}/: node_impl.py.j2
tpl/intents/llm_connector_python/{{id}}/{{id}}/: node_impl.py.j2
tpl/intents/ollama_connector_python/{{id}}/{{id}}/: node_impl.py.j2
tpl/mission_ctrls/base_intents_python/{{id}}/: package.xml.j2  setup.py.j2
tpl/mission_ctrls/base_intents_python/{{id}}/{{id}}/: mission_controller.py.j2
tpl/mission_ctrls/base_intents_ui_python/{{id}}/: package.xml.j2
tpl/mission_ctrls/base_intents_ui_python/{{id}}/{{id}}/: mission_controller.py.j2
tpl/mission_ctrls/base_python/{{id}}/launch/: {{id}}.launch.py.j2
tpl/mission_ctrls/llm_supervisor_python/{{id}}/: README.md.j2  package.xml.j2
tpl/mission_ctrls/super_basic_python/{{id}}/: package.xml.j2
tpl/python_script/: CMakeLists.txt.j2  README.md.j2  main.py.j2  package.xml.j2  setup.py.j2
tpl/python_script/module_set/: {{id}}.j2
tpl/python_script/pages/: README.md.j2
tpl/python_script/pages/en_US/: index.html.j2
tpl/python_script/res/: app_module.yaml.j2
tpl/python_script/scripts/: behavior.j2  run_app.j2
tpl/python_script/src/{{id}}/: application_controller.py.j2  behavior_impl.py.j2
tpl/python_script/{{id}}/: application_controller.py.j2  change_state_helper.py.j2  mission_controller.py.j2  run_app.py.j2
tpl/skills/base_python/{{id}}/: README.md.j2  package.xml.j2
tpl/skills/basic_chatbot/{{id}}/: package.xml.j2
tpl/skills/chatbot_msgs/: CMakeLists.txt.j2  package.xml.j2
tpl/skills/chatbot_msgs/srv/: GetResponse.srv.j2  ResetModel.srv.j2
tpl/skills/db_connector_python/{{id}}/: package.xml.j2
tpl/skills/ollama_connector_python/{{id}}/: package.xml.j2
tpl/skills/python_skill/: package.xml.j2
tpl/skills/python_skill/{{id}}/: skill_impl.py.j2
tpl/skills/say_python/{{id}}/: package.xml.j2
tpl/tasks/greet_task_python/{{id}}/: package.xml.j2
tpl/tasks/task_msgs/: package.xml.j2
(+27 files in other folders)
