<?xml version="1.0"?>
<package format="2">
  <name>pal_create_behaviour</name>
  <version>0.1.0</version>
  <description>A tool to create behaviour skeletons for interactive robots</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python3-jinja2</exec_depend>

  <export>
  </export>
</package>
